--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
+
+def libVersion = '1.0.0'
 
 android {
     compileSdk 32
@@ -8,6 +11,8 @@ android {
     defaultConfig {
         minSdk 19
         targetSdk 32
+        versionCode 1
+        versionName libVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -41,4 +46,19 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+// Because the components are created only during the afterEvaluate phase, you must
+// configure your publications using the afterEvaluate() lifecycle method.
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.mosect'
+                artifactId = 'AudioMixer'
+                version = libVersion
+            }
+        }
+    }
 }
